--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -10,6 +10,11 @@ if (localPropertiesFile.exists()) {
 //    if (keystorePropertiesFile.exists()) {
 //        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 //    }
+   def keystoreProperties = new Properties()
+   def keystorePropertiesFile = rootProject.file('key.properties')
+   if (keystorePropertiesFile.exists()) {
+       keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+   }
 
 
 def flutterRoot = localProperties.getProperty('flutter.sdk')
@@ -59,9 +64,17 @@ android {
 //            storePassword keystoreProperties['storePassword']
 //        }
 //    }
+   signingConfigs {
+       release {
+           keyAlias keystoreProperties['keyAlias']
+           keyPassword keystoreProperties['keyPassword']
+           storeFile keystoreProperties['storeFile'] ? file(keystoreProperties['storeFile']) : null
+           storePassword keystoreProperties['storePassword']
+       }
+   }
    buildTypes {
        release {
-           signingConfig signingConfigs.debug
+           signingConfig signingConfigs.release
        }
    }
 }
