--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   package_info: ^2.0.2
   syncfusion_flutter_charts: ^19.3.46
   shared_preferences: ^2.0.8
+  wakelock: ^0.5.6
+  purchases_flutter: ^3.7.0
 
 dev_dependencies:
   flutter_test:
